--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.footer {
+  bottom: 0;
+  background-color: #343a40;
+  color: white;
+  text-align: center;
+}
+
+.footer-summary {
+  font-size: 12px;
+}
+
+.company-valuation {
+  font-size: 12px;
+}
